--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^2.0.2
-  image_picker: ^0.7.3
+  image_picker: ^0.6.7+14
   path: ^1.8.0
   mime: ^1.0.0
 
